--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "6.36.4",
     "@emotion/is-prop-valid": "latest",
+    "@googlemaps/google-maps-services-js": "^3.4.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/adapter-neon": "^7.2.0",
     "@prisma/client": "^7.2.0",
@@ -44,6 +45,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-email/render": "latest",
+    "@react-google-maps/api": "^2.20.8",
+    "@react-pdf/renderer": "^4.3.2",
     "@studio-freight/lenis": "1.0.42",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
@@ -58,6 +61,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "prisma": "^7.2.0",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
